--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -4,37 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
-        body{ height: 100vh;
+        body{
+            height: 100vh;
+            /*
+            
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
-            /*  background-size: auto;
+
+            /*  
+            background-size: auto;
             background-size: contain;
             background-size: % e px;
             background-size: cover;
-            */
-            
 
+            /*  
+            background-attachment: fixed;
+            background-attachment: fixed;
+            background-attachment: scroll;
+            combiando com background-size: cover;
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            /*  
+            Shorthand - background
+            color > image > position > repeat > [size] > attachment
+            */ 
+            background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid blue;
             border-radius: 15px;
         }
+
     </style>
 </head>
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, debitis deleniti quos alias facilis, quisquam placeat incidunt minima possimus obcaecati, rem eos laborum aliquid dolor? At magni illum eius! Soluta? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo temporibus quos voluptates nostrum voluptatibus, nisi hic dicta eius eum molestiae voluptas dolorem ex officiis, est alias, placeat asperiores corrupti praesentium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas quibusdam provident accusantium dolorem minus fuga in itaque aperiam voluptatem corporis repellat nihil ipsam unde nostrum voluptates nam, repellendus quis necessitatibus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, debitis deleniti quos alias facilis, quisquam placeat incidunt minima possimus obcaecati, rem eos laborum aliquid dolor? At magni illum eius! Soluta? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo temporibus quos voluptates nostrum voluptatibus, nisi hic dicta eius eum molestiae voluptas dolorem ex officiis, est alias, placeat asperiores corrupti praesentium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas quibusdam provident accusantium dolorem minus fuga in itaque aperiam voluptatem corporis repellat nihil ipsam unde nostrum voluptates nam, repellendus quis necessitatibus. <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugiat nobis, alias et obcaecati beatae debitis corporis! Exercitationem aspernatur ea culpa sunt ab placeat quos, distinctio obcaecati numquam, dolorum veritatis</p>. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus ea repellat modi fugiat at? Corrupti reiciendis, impedit nisi veniam ex laboriosam dicta saepe quod, rem voluptas facilis voluptatem cupiditate. <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat obcaecati quidem id voluptatibus eaque, quae, atque adipisci eos nulla minima nam quaerat earum culpa facilis! Perferendis molestias praesentium adipisci modi. <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, voluptate. Architecto sint saepe soluta cupiditate mollitia corporis ad praesentium expedita eos nesciunt, doloribus quia minus nihil laborum omnis quod amet!</p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis in hic aliquam natus. Alias officia amet assumenda id eaque, libero, </p>officiis aperiam explicabo nisi iste sed cupiditate accusantium aut. Eveniet? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, doloribus et. Fugit ab veniam velit porro eligendi voluptatem, adipisci aspernatur nemo aut aliquam quibusdam deleniti sed consectetur nam voluptates inventore? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut velit est iste, officiis eos incidunt, illum doloremque atque saepe consequuntur, accusantium fugit distinctio quidem earum! Rerum earum voluptatem nesciunt iusto. <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus a aut sapiente cupiditate, ullam autem qui ea culpa eius aperiam impedit possimus architecto amet dignissimos odio perspiciatis expedita quibusdam esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero recusandae praesentium veritatis officia voluptas rerum voluptatum at fugit natus! Suscipit sed obcaecati, numquam quos consequatur nulla consequuntur voluptatem quisquam minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti non dolorum est consequatur voluptatibus, neque, earum autem eligendi ipsum temporibus architecto provident pariatur quas ullam laborum aspernatur? Iusto, fugiat enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat consectetur, tempora nobis quam atque recusandae nulla adipisci nemo nisi ut quisquam vitae dicta modi ducimus. Quam recusandae totam laboriosam quaerat.</P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde eveniet sit voluptates nam iusto vel sed quam nihil enim, dolores similique consequatur maiores blanditiis corrupti praesentium labore consectetur necessitatibus. Illum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque cum accusamus, dolore, enim perspiciatis aliquam necessitatibus, aut quis quod libero blanditiis excepturi magni corrupti repudiandae eos? Sapiente eius optio quo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste minima non ad magni praesentium atque hic fugit vero, quisquam sequi rerum obcaecati id quae, repudiandae aut deleniti in minus quaerat! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit, excepturi. Atque veniam magni et error itaque laudantium veritatis illo. Illum, molestiae. Quasi earum doloremque voluptatem cumque fugit beatae animi ab? <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime inventore vero repudiandae, blanditiis necessitatibus nostrum eveniet architecto aperiam tenetur et possimus dolores impedit tempora nulla commodi nesciunt rem, provident animi. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius debitis error autem neque illum illo aliquid repudiandae sint magnam minus, voluptate expedita corporis sapiente architecto harum ex aut delectus. Nemo! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quod expedita aut iure nihil corrupti rerum nulla! Odio nihil repellat alias, consectetur reiciendis quo iste aspernatur totam, ipsam, tempore quisquam!</P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, dicta impedit? Adipisci laudantium blanditiis quasi, odit possimus, quas nulla temporibus voluptate ab aliquam ratione sequi recusandae iure natus assumenda saepe?<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro animi laudantium incidunt voluptatibus, quos numquam qui enim quas magnam expedita ea, beatae voluptas. Itaque dignissimos dolor obcaecati quam corrupti adipisci.</p>
+        </p>
     </main>
 </body>
 </html>
